basic html setup 11ty

--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "11ty",
   "version": "1.0.0",
-  "description": "Experimenting with 11ty",
   "main": "index.js",
   "scripts": {
     "start": "npx @11ty/eleventy --serve",
@@ -18,6 +17,7 @@
     "url": "https://github.com/Clarice-COD/11ty/issues"
   },
   "homepage": "https://github.com/Clarice-COD/11ty#readme",
+  "description": "",
   "dependencies": {
     "@11ty/eleventy": "^3.1.2"
   }
